[tool.poetry]
name = "dga"
version = "0.1.0"
description = "DGA Detection and XAI"
authors = ["Marios Michailidis <mariosmix96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
click = "8.1.3"
graphviz = "0.20.1"
matplotlib = "3.7.1"
numpy = "1.23.5"
pandas = "2.0.0"
plotly = "5.14.1"
scikit-learn = "1.2.2"
shap = "0.41.0"
tensorflow = "2.11.0"
tqdm = "4.65.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.12.0"
ipython = "8.12.0"
jupyter = "1.0.0"

[tool.black]
line-length = 120

[tool.isort]
force_single_line = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
